--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-places-autocomplete": "^7.3.0"
   },
   "devDependencies": {
